Added an alert when trying to change the metadata content of a template

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -195,6 +195,9 @@ metadata.description=Descrição
 metadata.rights=Direitos
 metadata.level=Nível descritivo
 InspectionPane.title=Inspecionar
+InspectionPane.changeTemplate.title=Sobrepôr modelo
+InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
+InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
 
 
 
