Improved the text that shows the size of the selected items of the file explorer.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -198,6 +198,7 @@ InspectionPane.title=Inspection
 InspectionPane.changeTemplate.title=Override template
 InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
+items=items
 
 
 
