--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -198,6 +198,7 @@ InspectionPane.title=Inspecionar
 InspectionPane.changeTemplate.title=Sobrepôr modelo
 InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
 InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
+items=itens
 
 
 
