--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -199,6 +199,7 @@ InspectionPane.changeTemplate.title=Override template
 InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
 items=items
+folders=folder(s)
 
 
 
