--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -199,6 +199,7 @@ InspectionPane.changeTemplate.title=Sobrepôr modelo
 InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
 InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
 items=itens
+folders=pasta(s)
 
 
 
