--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -200,6 +200,7 @@ InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
 InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
 items=itens
 folders=pasta(s)
+Footer.memory=Memória utilizada: %s de %s
 
 
 
