Added a label to the metadata types combobox and set the first item as selected.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -201,6 +201,7 @@ InspectionPane.changeTemplate.content=You will no longer be able to use the form
 items=items
 folders=folder(s)
 Footer.memory=Memory usage: %s of %s
+type=Type
 
 
 
