--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -201,6 +201,7 @@ InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário p
 items=itens
 folders=pasta(s)
 Footer.memory=Memória utilizada: %s de %s
+type=Tipo
 
 
 
