--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -202,6 +202,8 @@ items=itens
 folders=pasta(s)
 Footer.memory=Memória utilizada: %s de %s
 type=Tipo
+metadata.repository=Repositório
+metadata.embargoTime=Tempo de embargo
 
 
 
