Updated CommonsIP. Added tooltips to the IPContentTypes. Changed "rules" to "associations" in the interface

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -41,12 +41,12 @@ FileExplorerPane.chooseDir=Escolher pasta
 FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
 FileExplorerPane.title=Explorador de ficheiros
 
-InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma regra
+InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma nova associação
 InspectionPane.help.title=Escolha um item \ndo plano de classificação\npara o inspecionar
 InspectionPane.metadata=Metadados
 InspectionPane.metadata.placeholder=Introduza os metadados do nível descritivo aqui
 InspectionPane.onDrop=Criar associação
-InspectionPane.rules=Regras
+InspectionPane.rules=Associações
 
 LoadingPane.createAssociation=Criar associação a
 
@@ -204,6 +204,10 @@ Footer.memory=Memória utilizada: %s de %s
 type=Tipo
 metadata.repository=Repositório
 metadata.embargoTime=Tempo de embargo
+IPContentType.ERMS=Sistema de Gestão de Recursos Eletrónicos
+IPContentType.RDBMS=Sistema de gestão de bases de dados relacionais
+IPContentType.SMURF=Formato de registo semanticamente marcado
+InspectionPane.IPType=Tipo de pacote
 
 
 
