--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -208,6 +208,8 @@ IPContentType.ERMS=Electronic Resource Management System
 IPContentType.RDBMS=Relational Database Management System
 IPContentType.SMURF=Semantically Marked Up Record Format
 InspectionPane.IPType=IP type
+IPContentType.MIXED=Mixed
+IPContentType.OTHER=Other
 
 
 
