--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -208,6 +208,8 @@ IPContentType.ERMS=Sistema de Gestão de Recursos Eletrónicos
 IPContentType.RDBMS=Sistema de gestão de bases de dados relacionais
 IPContentType.SMURF=Formato de registo semanticamente marcado
 InspectionPane.IPType=Tipo de pacote
+IPContentType.MIXED=Misto
+IPContentType.OTHER=Outro
 
 
 
