Updated the templates.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -206,10 +206,11 @@ metadata.repository=Repositório
 metadata.embargoTime=Tempo de embargo
 IPContentType.ERMS=Sistema de Gestão de Recursos Eletrónicos
 IPContentType.RDBMS=Sistema de gestão de bases de dados relacionais
-IPContentType.SMURF=Formato de registo semanticamente marcado
+IPContentType.SMURF=Formato de registo semanticamente anotado
 InspectionPane.IPType=Tipo de pacote
 IPContentType.MIXED=Misto
 IPContentType.OTHER=Outro
+metadata.descDate=Data da descrição
 
 
 
