--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -210,6 +210,7 @@ IPContentType.SMURF=Semantically Marked Up Record Format
 InspectionPane.IPType=IP type
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
+metadata.descDate=Description creation date
 
 
 
