Removed the IP type label. Selects metadata option when any option is changed.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -211,6 +211,7 @@ InspectionPane.IPType=Tipo de pacote
 IPContentType.MIXED=Misto
 IPContentType.OTHER=Outro
 metadata.descDate=Data da descrição
+InspectionPane.sipTypeTooltip=Tipo do pacote
 
 
 
