--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -211,6 +211,7 @@ InspectionPane.IPType=IP type
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
 metadata.descDate=Description creation date
+InspectionPane.sipTypeTooltip=IP type
 
 
 
