Fixes #159. Added alert message when an unexpected error occurs.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -212,6 +212,9 @@ IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
 metadata.descDate=Description creation date
 InspectionPane.sipTypeTooltip=IP type
+genericError.title=Oops! An error has occurred.
+genericError.content=An unexpected error has occurred.\nThe application may be unstable from now on and have strange behaviours. \nPlease contact the developers about this problem.
+CreationModalProcessing.openfolder=Open folder
 
 
 
