--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -212,6 +212,9 @@ IPContentType.MIXED=Misto
 IPContentType.OTHER=Outro
 metadata.descDate=Data da descrição
 InspectionPane.sipTypeTooltip=Tipo do pacote
+genericError.title=Oops! Ocorreu um erro.
+genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar instável a partir de agora e ter comportamentos estranhos. \nPor favor contacte com a equipa de desenvolvimento sobre este problema.
+CreationModalProcessing.openfolder=Abrir pasta
 
 
 
