--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -18,7 +18,6 @@ load=Betöltés
 remove=Eltávolít
 start=Start
 root=Gyökér
-
 CreationModalPreparation.choose=Válassz...
 CreationModalPreparation.creatingSips=SIP-ek létrehozása
 CreationModalPreparation.outputDirectory=Célmappa
@@ -36,19 +35,17 @@ CreationModalProcessing.finished=Kész
 CreationModalProcessing.impossibleEstimate=Nem becsülhető a várható befejezés.
 CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
-
-FileExplorerPane.chooseDir=Válassz mappát
+FileExplorerPane.chooseDir=Mappaválasztás
 FileExplorerPane.help.title=Válaszd ki a fájlokat\ntartalmazó mappát
 FileExplorerPane.title=Forrásfájlkereső
-
-InspectionPane.help.ruleList=Fájlok/mappák összerendelése \nleírási elemmel, \nszabály létrehozása\n
-InspectionPane.help.title=Besorolási séma \nelemének kiválasztása\nés megtekintése
+InspectionPane.help.ruleList=Párosítsd a fájlokat/mappákat a leírási elemekkel új összerendeléshez.
+InspectionPane.help.title=Besorolási séma \nelemeinek kiválasztása\nés megtekintése
 InspectionPane.metadata=Metaadatok
 InspectionPane.metadata.placeholder=Ide írd a leírási elem szintjéhez tartozó metaadatokat.
 InspectionPane.onDrop=Összerendelés létrehozása
+InspectionPane.rules=Összerendelések
 LoadingPane.createAssociation=Összerendelés a következővel\:
-
-Main.createCS = Új
+Main.createCS=Új
 Main.edit=Szerkesztés
 Main.exportCS=Export
 Main.exportSips=SIP(ek) exportálása
@@ -65,11 +62,9 @@ Main.showIgnored=Kihagyottak megjelenítése
 Main.showMapped=Mappeltek megjelenítése
 Main.useJava8=Jelenlegi Java verzió %s. Legalább \\"Java 1.8\\" szükséges.
 Main.view=Nézet
-
 RuleCell.createdItem=Létrehozott %d elem
-
 RuleModalPane.associationMethod=Válaszd ki az összerendelés módját
-RuleModalPane.chooseDirectory=Válassz mappát...
+RuleModalPane.chooseDirectory=Mappaválasztás
 RuleModalPane.chooseFile=Válassz fájlt...
 RuleModalPane.metadataPattern=Mintázat
 RuleModalPane.metadataMethod=Válasszd ki a metaadat módot
@@ -78,7 +73,6 @@ RuleModalProcessing.creatingPreview=SIP előnézetek létrehozása
 RuleModalProcessing.processedDirsFiles=Feldolgozva %d mappa és %d fájl
 RuleModalRemoving.removedFormat=Eltávolítva a SIP(ek)-ből %d%%
 RuleModalRemoving.title=SIP-ek eltávolítása
-
 SchemaNode.items.format=%s (%d elem)
 SchemaPane.add=Hozzáadás
 SchemaPane.help.title=Saját besorolási séma\nbetöltése
@@ -87,40 +81,30 @@ SchemaPane.remove=Eltávolít
 SchemaPane.title=Besorolási séma
 SchemaPane.create=Új besorolási séma
 SchemaPane.load=Besorolási séma betöltése
-SchemaPane.or=vagy készít egy
-
+SchemaPane.or=vagy
 SimpleSipCreator.copyingData=A SIP adatainak másolása
 SimpleSipCreator.copyingMetadata=A SIP metaadatainak másolása
 SimpleSipCreator.creatingStructure=A SIP mappaszerkezetének létrehozása
 SimpleSipCreator.finalizingSip=SIP véglegesítése
-
 SourceTreeCell.remove=Kihagyottak eltávolítása
 SourceTreeLoading.title=Betöltés...
 SourceTreeLoadMore.title=Továbbiak betöltése...
-
-association.singleSip.title = Egy leírási elem valamennyi kiválasztott fájllal és/vagy mappával
-association.singleSip.description = Ebben a módban kizárólag egyetlen SIP készül, amely tartalmazza valamennyi kiválasztott fájlt és mappát. Ha öt mappát és/vagy fájlt választottál, az összerendelés eredménye egy SIP lesz egy több leírási szinttel rendelkező egységhez kapcsolódva.
-
-association.sipSelection.title = Ebben az esetben egy leírási elem készül minden egyes kiválasztott fájlhoz vagy mappához.
-association.sipSelection.description = Ezt a módot válaszd, ha külön SIP-et akarsz készíteni minden kijelölt fájlhoz vagy mappához. Ha például öt fájlt/mappát választottál az összerendelés öt SIP-et hoz létre, pl. öt leírási elemet. Ezeknek az elemeknek mindegyike különböző leírási szinthez kapcsolódik.
-
-association.sipPerFile.title = Ebben az esetben egy leírási elem készül a kiválasztott mappa minden egyes fájljához.
-association.sipPerFile.description = Ebben a módban egy SIP-et hozunk létre a kiválasztott mappa minden egyes fájljához. A létrehozott SIP-ek száma meg fog egyezni a kiválasztott mappában lévő fájlok számával.
-
-association.sipWithStructure.title = Egy besorolási séma a mappastruktúrából.
-association.sipWithStructure.description = Ez a mód besorolási objektumokat hoz létre a SIP-hez. Akkor kell használni, ha a mappastruktúra megfelelően rendezett és  hasonlít az elvárt végleges eredményhez. Ha a mappának almappái vannak, ebből sorozatok készülnek, ha a mappában csak fájlok vannak, a teljes mappából egyetlen SIP készül. Ha a mappa tartalma vegyes és almappákat és fájlokat is tartalmaz, akkor minden fájlból SIP készül és valamennnyi almappából sorozat lesz.
-
-metadata.singleFile.title = Betöltés egyetlen fájlból
-metadata.singleFile.description = Ebben a módban minden egyes SIP-hez egy általad kiválasztott metaadatfájl kerül hozzáadásra. A kiválasztott fájl minden egyes SIP-be bekerül.
-
-metadata.sameFolder.title = Betöltés minden könyvtárból
-metadata.sameFolder.description = Ebben a módban a gyökérkönyvtárban lévő metaadatfájl bekerül a SIP-be. A metaadatfájlnak a definíció szerintinek kell kinéznie (pl. metadata.*)
-
-metadata.diffFolder.title = Egy mappából való betöltés
-metadata.diffFolder.description = Ebben a módban azt a mappát lehet megjelölni, ahol valamennyi, a SIP-be betöltendő metaadat fájl van. A metaadatfájlok és a SIP-ek összerendelése a (kiterjesztés nélküli) fájlnéven keresztül történik. Azokban a SIP-ekben, ahol az összerendelés nem lehetséges, nem lesz metaadat.
-
-metadata.template.title = Új metaadatok létrehozása sablonból
-metadata.template.description = Ezzel előre meghatározott sablonból lehet létrehozni. Ilyenkor valamennyi SIP-be ugyanaz a metaadat kerül. A SIP létrehozása után a felhasználó az csomagban lévő elsődleges adatok alapján a metaadatokat tovább szerkesztheti.
+association.singleSip.title=Egy leírási elem valamennyi kiválasztott fájllal és/vagy mappával
+association.singleSip.description=Ebben a módban kizárólag egyetlen SIP készül, amely tartalmazza valamennyi kiválasztott fájlt és mappát. Ha öt mappát és/vagy fájlt választottál, az összerendelés eredménye egy SIP lesz egy több leírási szinttel rendelkező egységhez kapcsolódva.
+association.sipSelection.title=Ebben az esetben egy leírási elem készül minden egyes kiválasztott fájlhoz vagy mappához.
+association.sipSelection.description=Ezt a módot válaszd, ha külön SIP-et akarsz készíteni minden kijelölt fájlhoz vagy mappához. Ha például öt fájlt/mappát választottál az összerendelés öt SIP-et hoz létre, pl. öt leírási elemet. Ezeknek az elemeknek mindegyike különböző leírási szinthez kapcsolódik.
+association.sipPerFile.title=Ebben az esetben egy leírási elem készül a kiválasztott mappa minden egyes fájljához.
+association.sipPerFile.description=Ebben a módban egy SIP-et hozunk létre a kiválasztott mappa minden egyes fájljához. A létrehozott SIP-ek száma meg fog egyezni a kiválasztott mappában lévő fájlok számával.
+association.sipWithStructure.title=Egy besorolási séma a mappastruktúrából.
+association.sipWithStructure.description=Ez a mód besorolási objektumokat hoz létre a SIP-hez. Akkor kell használni, ha a mappastruktúra megfelelően rendezett és  hasonlít az elvárt végleges eredményhez. Ha a mappának almappái vannak, ebből sorozatok készülnek, ha a mappában csak fájlok vannak, a teljes mappából egyetlen SIP készül. Ha a mappa tartalma vegyes és almappákat és fájlokat is tartalmaz, akkor minden fájlból SIP készül és valamennnyi almappából sorozat lesz.
+metadata.singleFile.title=Betöltés egyetlen fájlból
+metadata.singleFile.description=Ebben a módban minden egyes SIP-hez egy általad kiválasztott metaadatfájl kerül hozzáadásra. A kiválasztott fájl minden egyes SIP-be bekerül.
+metadata.sameFolder.title=Betöltés minden könyvtárból
+metadata.sameFolder.description=Ebben a módban a gyökérkönyvtárban lévő metaadatfájl bekerül a SIP-be. A metaadatfájlnak a definíció szerintinek kell kinéznie (pl. metadata.*)
+metadata.diffFolder.title=Egy mappából való betöltés
+metadata.diffFolder.description=Ebben a módban azt a mappát lehet megjelölni, ahol valamennyi, a SIP-be betöltendő metaadat fájl van. A metaadatfájlok és a SIP-ek összerendelése a (kiterjesztés nélküli) fájlnéven keresztül történik. Azokban a SIP-ekben, ahol az összerendelés nem lehetséges, nem lesz metaadat.
+metadata.template.title=Új metaadatok létrehozása sablonból
+metadata.template.description=Ezzel előre meghatározott sablonból lehet létrehozni. Ilyenkor valamennyi SIP-be ugyanaz a metaadat kerül. A SIP létrehozása után a felhasználó az csomagban lévő elsődleges adatok alapján a metaadatokat tovább szerkesztheti.
 export=Export
 SchemaPane.dragHelp=Mappák/fájlok elhelyezése\n
 SchemaPane.confirmRemove.header=Biztos vagy benne, hogy ezek a fájlok eltávolíthatók?
@@ -156,7 +140,6 @@ metadataValue.creator=Készítő
 FileExplorerPane.removeFolder=Mappa eltávolítása
 data=Elsődleges adatok
 InspectionPane.addRepresentation=Reprezentáció hozzáadása
-InspectionPane.removeRepresentation=Reprezentáció eltávolítása
 documentation=Dokumentáció
 InspectionPane.docsHelp.title=Dokumentáció mappáinak\nés fájljainak elhelyezése
 InspectionPane.onDropDocs=Dokumentáció hozzáadása
@@ -165,8 +148,51 @@ SimpleSipCreator.initZIP=Zip fájl inicializálása
 FileExplorerPane.alertAddFolder.content=A  "%s" mappát nem lehet még\negyszer hozzáadni.
 FileExplorerPane.alertAddFolder.title=Mappa hozzáadása
 FileExplorerPane.alertAddFolder.header=A mappát nem lehet hozzáadni.
+InspectionPane.validate=Validálás
+InspectionPane.textContent=Szöveges tartalom
+InspectionPane.form=Űrlap
+InspectionPane.addMetadata=Metaadat hozzáadása
+InspectionPane.removeMetadata=Metaadatfájl eltávolítása
+InspectionPane.removeMetadata.header=Biztos, hogy törlöd a metaadat fájlt?
+InspectionPane.removeMetadata.title=Metaadatfájl törlése
 InspectionPane.removeMetadata.content=Minden változtatás el fog veszni.
-
+metadata.emptyFile.title=Új fájl létrehozása
+metadata.emptyFile.description=Ezt használd, a későbbiekben szerkeszthető új fájl létrehozásához 
+name=Név
+InspectionPane.addMetadataError.title=Metaadatfájl létrehozása
+InspectionPane.addMetadataError.header=Hiba történt a metaadatfájl hozzáadásakor
+InspectionPane.addMetadataError.content=Már van egy "%s" nevű fájl a metaadatlistában.
+CreationModalProcessing.elapsed=Eltelt idő
+add=Hozzáadás
+metadata.id=ID
+metadata.title=Cím
+metadata.producer=Készítő
+metadata.now=Most
+metadata.dateInitial=Kezdő dátum
+metadata.dateFinal=Záró dátum
+metadata.creator=Készítő
+metadata.language=Nyelv
+metadata.description=Leírás
+metadata.rights=Felhasználási korlátozások
+metadata.level=Leírási szint
+InspectionPane.title=Ellenőrzés
+InspectionPane.changeTemplate.title=Sablon felülírása
+InspectionPane.changeTemplate.header=Felülírod a sablont?
+InspectionPane.changeTemplate.content=A későbbiekben nem tudod majd az űrlapot használni a metaadatfájl szerkesztésére.
+items=darab
+folders=mappák
+Footer.memory=Felhasznált memória % a %s-ból
+type=Típus
+metadata.repository=Levéltár
+metadata.embargoTime=Zárolási idő
+IPContentType.ERMS=Elektronikus Iratkezelő Rendszer
+IPContentType.RDBMS=Relációs Adatbáziskezelő Rendszer
+IPContentType.SMURF=Szemantikusan jelölt formátum
+InspectionPane.IPType=Infomrációs csomag típus
+IPContentType.MIXED=Vegyes
+IPContentType.OTHER=Egyéb
+metadata.descDate=A leírás készítési dátuma
+InspectionPane.sipTypeTooltip=Infomrációs csomag típus
 
 
 
