--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -215,6 +215,8 @@ InspectionPane.sipTypeTooltip=Tipo do pacote
 genericError.title=Oops! Ocorreu um erro.
 genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar instável a partir de agora e ter comportamentos estranhos. \nPor favor contacte com a equipa de desenvolvimento sobre este problema.
 CreationModalProcessing.openfolder=Abrir pasta
+selected=Selecionados
+CreationModalPreparation.exportAll=Exportar todos
 
 
 
