--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -215,6 +215,8 @@ InspectionPane.sipTypeTooltip=IP type
 genericError.title=Oops! An error has occurred.
 genericError.content=An unexpected error has occurred.\nThe application may be unstable from now on and have strange behaviours. \nPlease contact the developers about this problem.
 CreationModalProcessing.openfolder=Open folder
+selected=Selected
+CreationModalPreparation.exportAll=Export all
 
 
 
