Added popover after applying changes

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -224,6 +224,7 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 apply=Aplicar
 InspectionPane.multipleSelected.confirm=Tem a certeza que pretende aplicar estas alterações?
 InspectionPane.multipleSelected.helpTitle=Ajuda
+InspectionPane.multipleSelected.appliedMessage=Alterações aplicadas!
 
 
 
