--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -224,6 +224,7 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
+InspectionPane.multipleSelected.appliedMessage=Changes applied!
 
 
 
