--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -217,10 +217,7 @@ genericError.content=An unexpected error has occurred.\nThe application may be u
 CreationModalProcessing.openfolder=Open folder
 selected=Selected
 CreationModalPreparation.exportAll=Export all
-InspectionPane.multipleSelected.help=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
-\n\
-\n\
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+InspectionPane.multipleSelected.help=The metadata files added to the list above will be added to all the selected items from the classification plan. If there are any conflicts, i.e. an existing metadata file has the same name as a new one, the existing file will be replaced. The only exception is when the files are the same template. In this case, the values of the new template will override the old ones. The only situation where the old value is kept is if the value of a field is {{auto-generate}}.
 apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
