Enhanced some details of the multiple edition of SIPs

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -217,7 +217,7 @@ genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar ins
 CreationModalProcessing.openfolder=Abrir pasta
 selected=Selecionados
 CreationModalPreparation.exportAll=Exportar todos
-InspectionPane.multipleSelected.help=The metadata files added to the list above will be added to all the selected items from the classification plan. If there are any conflicts, i.e. an existing metadata file has the same name as a new one, the existing file will be replaced. The only exception is when the files are the same template. In this case, the values of the new template will override the old ones. The only situation where the old value is kept is if the value of a field is {{auto-generate}}.
+InspectionPane.multipleSelected.help=Os ficheiros de metadados adicionados à lista acima serão adicionados a todos os itens seleccionados do plano de classificação. Se existirem conflitos, isto é, um ficheiro de metadados existente tem o mesmo nome que um novo, o ficheiro existente será substituído. A única exceção é quando existem ficheiros que foram criados a partir do mesmo modelo. Neste caso, os valores do novo modelo substituírão os valores antigos. O único caso onde o valor antigo é guardado é se o novo valor do campo é {{auto-generate}}.
 apply=Aplicar
 InspectionPane.multipleSelected.confirm=Tem a certeza que pretende aplicar estas alterações?
 InspectionPane.multipleSelected.helpTitle=Ajuda
