--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -222,6 +222,7 @@ apply=Aplicar
 InspectionPane.multipleSelected.confirm=Tem a certeza que pretende aplicar estas alterações?
 InspectionPane.multipleSelected.helpTitle=Ajuda
 InspectionPane.multipleSelected.appliedMessage=Alterações aplicadas!
+Main.openConfigurationFolder=Abrir pasta de configuração
 
 
 
