The application restarts after a language change is made.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -223,6 +223,7 @@ InspectionPane.multipleSelected.confirm=Tem a certeza que pretende aplicar estas
 InspectionPane.multipleSelected.helpTitle=Ajuda
 InspectionPane.multipleSelected.appliedMessage=Alterações aplicadas!
 Main.openConfigurationFolder=Abrir pasta de configuração
+restart=Reiniciar
 
 
 
