Updated the Hungarian translations

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -157,7 +157,7 @@ InspectionPane.removeMetadata.header=Biztos, hogy törlöd a metaadat fájlt?
 InspectionPane.removeMetadata.title=Metaadatfájl törlése
 InspectionPane.removeMetadata.content=Minden változtatás el fog veszni.
 metadata.emptyFile.title=Új fájl létrehozása
-metadata.emptyFile.description=Ezt használd, a későbbiekben szerkeszthető új fájl létrehozásához 
+metadata.emptyFile.description=Ezt használd, a későbbiekben szerkeszthető új fájl létrehozásához
 name=Név
 InspectionPane.addMetadataError.title=Metaadatfájl létrehozása
 InspectionPane.addMetadataError.header=Hiba történt a metaadatfájl hozzáadásakor
@@ -193,6 +193,18 @@ IPContentType.MIXED=Vegyes
 IPContentType.OTHER=Egyéb
 metadata.descDate=A leírás készítési dátuma
 InspectionPane.sipTypeTooltip=Infomrációs csomag típus
+genericError.title=Hoppá\! Hiba történt.
+genericError.content=Váratlan hiba történt. Az alkalmazás nem stabil és furcsaságokat produkálhat. Vegye fel a kapcsolatot a fejlesztőkkel.
+CreationModalProcessing.openfolder=Mappa megnyitása
+selected=Kiválasztva
+CreationModalPreparation.exportAll=Mindet exportál
+InspectionPane.multipleSelected.help=A fenti listához rendelt metaadatfájlok hozzáadásra kerülnek a besorolás kiválasztott elemeihez. Ütközéskor, például, ha egy korábbi metaadatfájlnak ugyanaz a neve mint az újnak, az új felülírja a korábbit. Az egyedüli kivételt ez alól a sablonok jelentik, a sablonok esetén az új sablon értékei írják felül a régiekét. Egyetlen eset van, amikor a régi érték megmarad, ha a mező értéke\: {{auto-generate}} vagy {{mixed}}
+apply=Végrehajtás
+InspectionPane.multipleSelected.confirm=Biztos, hogy végrehajtod a változtatásokat?
+InspectionPane.multipleSelected.helpTitle=Súgó
+InspectionPane.multipleSelected.appliedMessage=Változtatások végrehajtva\!
+Main.openConfigurationFolder=Konfiguráció mappa megnyitása
+restart=Újraindítás
 
 
 
