Updated the Spanish (Chile) translations

--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -2,7 +2,7 @@ associate=Asociar
 back=Atrás
 cancel=Cancelar
 close=Cerrar
-collapse=Collapse
+collapse=Contraer
 confirm=Confirmar
 content=Contenido
 continue=Continuar
@@ -96,7 +96,7 @@ association.sipSelection.description=Utilice esta opción para crear un SIP para
 association.sipPerFile.title=Un elemento de descripción para cada archivo en la carpeta seleccionada (s)
 association.sipPerFile.description=Utilice esta opción para crear un SIP para cada archivo en la carpeta (s) seleccionada. Esta operación creará un conjunto de SIP igual al número de archivos en la carpeta (s) seleccionada.
 association.sipWithStructure.title=Un esquema de clasificación de la estructura de carpetas
-association.sipWithStructure.description=This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
+association.sipWithStructure.description=Esta opción crea objetos de descripción, además de paquetes de presentación. Se debe utilizar cuando la estructura de la carpeta está bien organizada y se parece al plan de salida deseado. Si únicamente una carpeta tiene subcarpetas, se crea una serie. Cuando los hijos de una carpeta son solamente archivos, toda la carpeta se utiliza para crear un paquete de presentación. En una situación en la que una carpeta tiene un contenido mixto, archivos y sub-carpetas, cada archivo será un paquete de presentación y cada subcarpeta será una serie.
 metadata.singleFile.title=Cargar desde un archivo
 metadata.singleFile.description=Utilice esta opción para añadir a cada SIP un archivo de metadatos de su elección. El archivo seleccionado se añadirá a cada uno de los SIP previamente creados.
 metadata.sameFolder.title=Cargar desde cada directorio
@@ -184,7 +184,7 @@ folders=Carpeta(s)
 Footer.memory=El uso de memoria\:%s de%s
 type=Tipo
 metadata.repository=Repositorio
-metadata.embargoTime=Embargo Time
+metadata.embargoTime=Tiempo de embargo
 IPContentType.ERMS=Sistema de Gestión de Recursos Electrónicos
 IPContentType.RDBMS=Sistema de gestión de bases de datos relacionales
 IPContentType.SMURF=Marcado semánticamente hasta formato de grabación
@@ -196,6 +196,15 @@ InspectionPane.sipTypeTooltip=Tipo IP
 genericError.title=Oops\! Ha ocurrido un error...
 genericError.content=Ha ocurrido un error inesperado.\nLa aplicación puede ser inestable a partir de ahora y podría tener comportamientos extraños.\nPor favor, póngase en contacto con los desarrolladores acerca de este problema.
 CreationModalProcessing.openfolder=Abrir carpeta
+selected=Seleccionado
+CreationModalPreparation.exportAll=Exportar todo
+InspectionPane.multipleSelected.help=Los archivos de metadatos añadidos a la lista anterior se añadirán a todos los elementos seleccionados a partir del plan de clasificación. Si hay algún conflicto, es decir, un archivo de metadatos existente tiene el mismo nombre que uno nuevo, el archivo existente será reemplazado. La única excepción es cuando los archivos son la misma plantilla. En este caso, los valores de la nueva plantilla harán caso omiso de los antiguos. Los únicos casos en los que se mantiene el valor anterior es si el valor de un campo es {{auto-generate}} o {{mixed}}.
+apply=Aplicar
+InspectionPane.multipleSelected.confirm=Estas seguro de aplicar los cambios?
+InspectionPane.multipleSelected.helpTitle=Ayuda
+InspectionPane.multipleSelected.appliedMessage=Cambios Aplicados\!
+Main.openConfigurationFolder=Abrir carpeta de configuración
+restart=Restaurar
 
 
 
