--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -224,6 +224,10 @@ InspectionPane.multipleSelected.helpTitle=Help
 InspectionPane.multipleSelected.appliedMessage=Changes applied!
 Main.openConfigurationFolder=Open configuration folder
 restart=Restart
+CreationModalPreparation.prefix=SIP names
+name_types.ID=ID
+name_types.TITLE_ID=Title + ID
+name_types.TITLE_DATE=Title + Date
 
 
 
