--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -224,6 +224,10 @@ InspectionPane.multipleSelected.helpTitle=Ajuda
 InspectionPane.multipleSelected.appliedMessage=Alterações aplicadas!
 Main.openConfigurationFolder=Abrir pasta de configuração
 restart=Reiniciar
+CreationModalPreparation.prefix=Nome dos SIPs
+name_types.ID=ID
+name_types.TITLE_ID=Título + ID
+name_types.TITLE_DATE=Título + Data
 
 
 
