--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -228,6 +228,8 @@ CreationModalPreparation.prefix=SIP names
 name_types.ID=ID
 name_types.TITLE_ID=Title + ID
 name_types.TITLE_DATE=Title + Date
+and=and
+CreationModalPreparation.exportItems=Export items
 
 
 
