--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -215,7 +215,7 @@ InspectionPane.sipTypeTooltip=Tipo do pacote
 genericError.title=Oops! Ocorreu um erro.
 genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar instável a partir de agora e ter comportamentos estranhos. \nPor favor contacte com a equipa de desenvolvimento sobre este problema.
 CreationModalProcessing.openfolder=Abrir pasta
-selected=Selecionados
+selected=selecionados
 CreationModalPreparation.exportAll=Exportar todos
 InspectionPane.multipleSelected.help=Os ficheiros de metadados adicionados à lista acima serão adicionados a todos os itens seleccionados do plano de classificação. Se existirem conflitos, isto é, um ficheiro de metadados existente tem o mesmo nome que um novo, o ficheiro existente será substituído. A única exceção é quando existem ficheiros que foram criados a partir do mesmo modelo. Neste caso, os valores do novo modelo substituírão os valores antigos. Os únicos casos onde o valor antigo é guardado é se o novo valor do campo é {{auto-generate}} ou {{mixed}}.
 apply=Aplicar
@@ -228,6 +228,8 @@ CreationModalPreparation.prefix=Nome dos SIPs
 name_types.ID=ID
 name_types.TITLE_ID=Título + ID
 name_types.TITLE_DATE=Título + Data
+and=e
+CreationModalPreparation.exportItems=Exportar itens
 
 
 
