--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -230,6 +230,8 @@ name_types.TITLE_ID=Título + ID
 name_types.TITLE_DATE=Título + Data
 and=e
 CreationModalPreparation.exportItems=Exportar itens
+Main.newVersion.content=A versão atual é %s\nA versão mais recente é %s\n\nPretende transferir a última versão do RODA-in?
+Main.newVersion.header=Nova versão disponível
 
 
 
