Updated the DC, EAD 2002 and EAD3 templates

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -239,6 +239,7 @@ Main.noUpdates.header=RODA-in version %s
 Main.showHelp=Show help
 Main.hideHelp=Hide help
 templatingSystemHelp.header=Templating system help
+metadata.otherlevel=Other level
 
 
 
