--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -232,6 +232,7 @@ and=e
 CreationModalPreparation.exportItems=Exportar itens
 Main.newVersion.content=A versão atual é %s\nA versão mais recente é %s\n\nPretende transferir a última versão do RODA-in?
 Main.newVersion.header=Nova versão disponível
+metadata.otherlevel=Outro nível
 Main.help=Ajuda
 Main.checkVersion=Verificar se há atualizações
 Main.noUpdates.content=Está a usar a versão mais recente do RODA-in.
