--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -232,6 +232,10 @@ and=and
 CreationModalPreparation.exportItems=Export items
 Main.newVersion.content=Current version is %s\nLatest version is %s\n\nDo you want to download the latest version of RODA-in?
 Main.newVersion.header=New version is available
+Main.help=Help
+Main.checkVersion=Check for updates
+Main.noUpdates.content=You're using the latest version of RODA-in.
+Main.noUpdates.header=RODA-in version %s
 
 
 
