Split the config in two files. Added a toggle help button to the menu.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -236,6 +236,8 @@ Main.help=Ajuda
 Main.checkVersion=Verificar se há atualizações
 Main.noUpdates.content=Está a usar a versão mais recente do RODA-in.
 Main.noUpdates.header=RODA-in versão %s
+Main.showHelp=Mostrar ajudas
+Main.hideHelp=Esconder ajudas
 
 
 
