--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -236,6 +236,8 @@ Main.help=Help
 Main.checkVersion=Check for updates
 Main.noUpdates.content=You're using the latest version of RODA-in.
 Main.noUpdates.header=RODA-in version %s
+Main.showHelp=Show help
+Main.hideHelp=Hide help
 
 
 
