Added a help panel for the templating system using HTML.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -238,6 +238,7 @@ Main.noUpdates.content=Está a usar a versão mais recente do RODA-in.
 Main.noUpdates.header=RODA-in versão %s
 Main.showHelp=Mostrar ajudas
 Main.hideHelp=Esconder ajudas
+templatingSystemHelp.header=Ajuda sobre o sistema de modelos
 
 
 
