--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -8,3 +8,39 @@ inspectionPanel.data=
 inspectionPanel.metadata=
 metadataMethod=
 secondStep=
+templatingSystem=<h4>The templating system</h4>\
+\
+<p>Since it's tedious to edit the template files by hand, we added a way to create forms based on the fields of the templates. These files are located in the "roda-in" folder (My Documents when using Windows and the user's home directory if using Unix), under the "templates" folder. Using the powerful Handlebars engine, anyone can create template files with the necessary information to create the form. In addition to a simple tag, (e.g. {{person}}), we can now add options which will modify the way each field is created. These options are key-value elements, e.g. <code>title="SIP creation using RODA-in"</code>, where the key is the name of the option and the value is the value that will be given to that option. Only the first tag should have options, i.e., if there's two tags with the same name, the options of the second are ignored. The options are not required, the form is still created with a simple tag, which creates a simple text field.</p>\
+\
+<p>The available options that alter the fields created for each tag are:</p>\
+\
+<ul>\
+<li>value - the predefined value of the field</li>\
+<li>order - the order of the field</li>\
+<li>type - the type of the field. The possible values are:\
+\
+<ul>\
+<li>text - text field</li>\
+<li>text-area - Text area. Larger than a field text.</li>\
+<li>date - text field with a date picker</li>\
+<li>list - list with the possible values (combo box)</li>\
+</ul></li>\
+<li>list - List with the possible values that a field can have. Usable when <code>type="list"</code>. The format is a JSON array. Example: <code>[option A, option B, "option C"]</code></li>\
+<li>label - The label that appears to the left of the field.</li>\
+<li>mandatory - If set to true the label is styled in bold to draw attention.</li>\
+<li>hidden - If set to true the field is hidden</li>\
+<li>auto-generate - Fills the value with one of the available generators. Overrides the value option:\
+\
+<ul>\
+<li>now - the current date in the format year/month/day</li>\
+<li>id - generates an identifier</li>\
+<li>title - generates a title</li>\
+<li>level - adds the current description level</li>\
+<li>parentid - adds the parent's id, if it exists</li>\
+<li>language - adds the system language, based on the locale. Example: "português" or "English"</li>\
+</ul></li>\
+</ul>\
+\
+<p>The following is an example of how the tags can be used:</p>\
+\
+<p><code>{{title order=1 type="text" label="Template title" mandatory=true auto-generate="title"}}</code></p>
