Added the portuguese translation of the templating system help.

--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -32,7 +32,7 @@ templatingSystem=<h4>The templating system</h4>\
 <li>auto-generate - Fills the value with one of the available generators. Overrides the value option:\
 \
 <ul>\
-<li>now - the current date in the format year/month/day</li>\
+<li>now - the current date in the format year-month-day</li>\
 <li>id - generates an identifier</li>\
 <li>title - generates a title</li>\
 <li>level - adds the current description level</li>\
