Styled the help token popover. Added export help.

--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -1,6 +1,8 @@
 associate=
 associationMethod=
-export=
+export=The last step in the SIP creation process is to export the mapped SIPs to an output format to be submitted to the repository for ingest. It’s important to note that RODA-in does not check if the SIPs are valid before exporting them and this process should be performed on the repository or with an external tool.\
+\
+The producers can personalize the export process to be tailored to their needs. The first decision is whether to export all the SIPs present in the classification plan or only the selected ones. By default, the only exported SIPs are the selected items when the user clicks the "Export" button, but that can be overriden using the "Export all" toggle button. Another required field is the destination of the SIPs once they’re exported. It’s also at this stage that the export format/type ust be chosen, at the moment, RODA-in supports two: E-ARK SIP and BagIt.
 fileExplorer=
 firstStep=
 inspectionPanel.associations=
