--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -1,15 +1,19 @@
-associate=
+associate=To create SIPs, the user has to choose an aggregation rule. Start by selecting the files and folders that hold the content to be included in the SIPs and drag n’ drop them on a node of the classification hierarchy. This node can either be a classification scheme node, a SIP or the root level (i.e. no specific node). Alternatively the user may also click the "Associate" button to start the process. After this operation, the user is presented with a set of options that will shape the way the SIPs are created.
 associationMethod=
 export=The last step in the SIP creation process is to export the mapped SIPs to an output format to be submitted to the repository for ingest. It’s important to note that RODA-in does not check if the SIPs are valid before exporting them and this process should be performed on the repository or with an external tool.\
 \
 The producers can personalize the export process to be tailored to their needs. The first decision is whether to export all the SIPs present in the classification plan or only the selected ones. By default, the only exported SIPs are the selected items when the user clicks the "Export" button, but that can be overriden using the "Export all" toggle button. Another required field is the destination of the SIPs once they’re exported. It’s also at this stage that the export format/type ust be chosen, at the moment, RODA-in supports two: E-ARK SIP and BagIt.
-fileExplorer=
-firstStep=
+fileExplorer=An item can be in one of three states: normal, ignored or mapped. Normal is the default state of the items and the only state from which SIPs can be created.\
+\
+Items in the ignored state will not be used to create packages. They can be ignored based on rules defined in the configuration of the application, or manually using the “Ignore” button. These items are hidden by default, but can be made visible by turning on a menu option.\
+\
+Mapped items are the ones that have already been added to an SIP. The goal is to implement a “map and forget” strategy in which users drag n’ drop items from their file system to create SIPs after which they disappear from the user interface. This enables users to fully focus on the remaining items and thus be more productive in their SIP creation project.
+firstStep=The first step of the workflow is to choose which computer files and folders to archive and add them to the application’s file explorer. This action will display the folder and its content in a folder tree structure. The folders and files are clearly distinguishable from each other and folders can be expanded in order to inspect its children elements.
 inspectionPanel.associations=
 inspectionPanel.data=
 inspectionPanel.metadata=
 metadataMethod=
-secondStep=
+secondStep=The classification scheme can either be imported from file or created directly in the application. In the first option, the user must import a JSON formatted file which was either exported by RODA or RODA-in, since these are the only supported formats at the time. To create a classification plan, the first step is to add description items using the "Add" button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. The levels are created by default with a metadata file obtained using the EAD 2002 template. Since the metadata file was created using a template, a form is available where the user can edit the title and description level of the item. In addition to adding items, there are two other actions available, removal and organization.
 templatingSystem=<h4>The templating system</h4>\
 \
 <p>Since it's tedious to edit the template files by hand, we added a way to create forms based on the fields of the templates. These files are located in the "roda-in" folder (My Documents when using Windows and the user's home directory if using Unix), under the "templates" folder. Using the powerful Handlebars engine, anyone can create template files with the necessary information to create the form. In addition to a simple tag, (e.g. {{person}}), we can now add options which will modify the way each field is created. These options are key-value elements, e.g. <code>title="SIP creation using RODA-in"</code>, where the key is the name of the option and the value is the value that will be given to that option. Only the first tag should have options, i.e., if there's two tags with the same name, the options of the second are ignored. The options are not required, the form is still created with a simple tag, which creates a simple text field.</p>\
