Fixed the subtitles of the export panel

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -216,7 +216,7 @@ genericError.title=Oops! Ocorreu um erro.
 genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar instável a partir de agora e ter comportamentos estranhos. \nPor favor contacte com a equipa de desenvolvimento sobre este problema.
 CreationModalProcessing.openfolder=Abrir pasta
 selected=Selecionados
-CreationModalPreparation.exportAll=Exportar todos
+CreationModalPreparation.exportAll=Exportar todos os SIPs
 InspectionPane.multipleSelected.help=Os ficheiros de metadados adicionados à lista acima serão adicionados a todos os itens seleccionados do plano de classificação. Se existirem conflitos, isto é, um ficheiro de metadados existente tem o mesmo nome que um novo, o ficheiro existente será substituído. A única exceção é quando existem ficheiros que foram criados a partir do mesmo modelo. Neste caso, os valores do novo modelo substituírão os valores antigos. Os únicos casos onde o valor antigo é guardado é se o novo valor do campo é {{auto-generate}} ou {{mixed}}.
 apply=Aplicar
 InspectionPane.multipleSelected.confirm=Tem a certeza que pretende aplicar estas alterações?
