Fixes #177 - Validation action messages are not translated (are always in english)

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -240,6 +240,8 @@ Main.noUpdates.header=RODA-in versão %s
 Main.showHelp=Mostrar ajudas
 Main.hideHelp=Esconder ajudas
 templatingSystemHelp.header=Ajuda sobre o sistema de modelos
+validMetadata=Metadados válidos
+invalidMetadata=Metadados inválidos!
 
 
 
