Stops displaying error messages if there are too many errors in succession. The previous behaviour had the risk of hanging the application.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -242,6 +242,10 @@ Main.hideHelp=Esconder ajudas
 templatingSystemHelp.header=Ajuda sobre o sistema de modelos
 validMetadata=Metadados válidos
 invalidMetadata=Metadados inválidos!
+CreationModalProcessing.errorMessagesStopped.header=Mensages de erro escondidas
+CreationModalProcessing.errorMessagesStopped.content=Devido ao elevado número de mensages de erro, não serão mostradas mais erros até ao fim da exportação.\
+\
+Consulte o ficheiro de registo da aplicação para ver todas as mensagens de erro.
 
 
 
