--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -242,6 +242,10 @@ templatingSystemHelp.header=Templating system help
 metadata.otherlevel=Other level
 validMetadata=Valid metadata!
 invalidMetadata=Invalid metadata!
+CreationModalProcessing.errorMessagesStopped.header=Error messages hidden
+CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent errors will not be displayed.\
+\
+Please check the application's log file to see all the error messages.
 
 
 
