Changed the showing popup delay to 1 second.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -207,7 +207,7 @@ metadata.embargoTime=Embargo Time
 IPContentType.ERMS=Electronic Resource Management System
 IPContentType.RDBMS=Relational Database Management System
 IPContentType.SMURF=Semantically Marked Up Record Format
-InspectionPane.IPType=IP type
+InspectionPane.IPType=Package type
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
 metadata.descDate=Description creation date
