Changed the help popups to Tooltips

--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -66,3 +66,15 @@ templatingSystem=<h4>The templating system</h4>\
 <p>The following is an example of how the tags can be used:</p>\
 \
 <p><code>{{title order=1 type="text" label="Template title" mandatory=true auto-generate="title"}}</code></p>
+tooltip.associate=Create SIPs using the selected items
+tooltip.associationMethod=associationMethod
+tooltip.export=export
+tooltip.fileExplorer=fileExplorer
+tooltip.firstStep=firstStep
+tooltip.inspectionpane=inspectionpane
+tooltip.inspectionPanel.associations=inspectionPanel.associations
+tooltip.inspectionPanel.data=inspectionPanel.data
+tooltip.inspectionPanel.metadata=inspectionPanel.metadata
+tooltip.metadataMethod=metadataMethod
+tooltip.schemapane=schemapane
+tooltip.secondStep=secondStep
