Added a help page with all of the help messages. Fixes #192

--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -6,11 +6,11 @@ fileExplorer=<p>An item can be in one of three states: normal, ignored or mapped
 <p>Items in the <strong>ignored</strong> state will not be used to create packages. They can be ignored based on rules defined in the configuration of the application, or manually using the “Ignore” button. These items are hidden by default, but can be made visible by turning on a menu option.</p>\
 <p><strong>Mapped</strong> items are the ones that have already been added to an SIP. The goal is to implement a “map and forget” strategy in which users drag n’ drop items from their file system to create SIPs after which they disappear from the user interface. This enables users to fully focus on the remaining items and thus be more productive in their SIP creation project.</p>
 firstStep=The first step of the workflow is to choose which computer files and folders to archive and add them to the application’s file explorer. This action will display the folder and its content in a folder tree structure. The folders and files are clearly distinguishable from each other (since their icons are different) and folders can be expanded in order to inspect its children elements.
-inspectionpane=After creating SIPs, users can opt to manually enrich the SIPs or handle exceptional cases manually. This is an optional step, nevertheless it contains some important features that should not be overlooked such as creating and validating metadata, manipulating the SIP's content or adding documentation.
+inspectionPanel=After creating SIPs, you can opt to manually enrich the SIPs or handle exceptional cases manually. This is an optional step, nevertheless it contains some important features that should not be overlooked such as creating and validating metadata, manipulating the SIP's content or adding documentation.
 inspectionPanel.associations=The associations panel displays the association rules that have the current selected node as the output. Each rule displays the input items, the aggregation option used to create the SIPs and how many SIPs were created. Additionally, the user may also remove the SIPs created by the rule by clicking the "Remove" button.
 inspectionPanel.data=<p>The SIP’s <strong>data</strong> (or content) is divided in “representations” which can be added or removed. Removing files and folders from the SIP content is also possible. These files will return to the <em>normal</em> state and will become available in the file explorer to be included in another SIP. The drag n’ drop system of the data folder structure enables rearranging the content of the SIP and moving files between representations. Clicking the rightmost button changes the panel between “Data” and “Documentation”.</p>\
 <p><strong>Documentation</strong> can be added to SIPs to complement the information that is being archived in the Data section. Files and folders can be added from the application’s file explorer or from the operation system’s file explorer using a drag and drop system. Unlike when files are added to the Data section of SIPs, adding documentation does not set the state of the files as mapped, so the producer can add the same file to the documentation of any number of SIPs. After being added, the files can be removed and rearranged in the same way as in the Data section.</p>
-inspectionPanel.metadata=<p>When SIPs are created using the metadata template option, users are able to edit metadata via an <strong>input form</strong>. Additionally, the <strong>XML source</strong> of the metadata file can also be displayed and edited on the user interface. In addition to editing metadata files, it’s possible to <strong>add</strong> and <strong>remove</strong> metadata files. There are three options available when adding a new metadata file:</p>\
+inspectionPanel.metadata=<p>When SIPs are created using the metadata template option, you are able to edit metadata via an <strong>input form</strong>. Additionally, the <strong>XML source</strong> of the metadata file can also be displayed and edited on the user interface. In addition to editing metadata files, it’s possible to <strong>add</strong> and <strong>remove</strong> metadata files. There are three options available when adding a new metadata file:</p>\
 <ol>\
 <li>New metadata based on an existing template</li>\
 <li>New metadata based on an existing file</li>\
@@ -18,8 +18,21 @@ inspectionPanel.metadata=<p>When SIPs are created using the metadata template op
 </ol>\
 <p>To avoid conflicts, two metadata files of the same description item cannot have the same name, so new files are rejected if this happens. As a consequence of this, two files based on the same template cannot be present in the same description item.</p>\
 <p>Provided that the schema is added to the type definition, RODA-in provides another useful feature: <strong>metadata validation</strong>. This feature is only available to metadata files created from templates and the template’s type must have a schema correctly added in the configuration. In the case where a user is editing a form, with the push of a button the tags from the template are temporarily replaced with the corresponding values and the resulting file is validated against the schema. If the file cannot be validated successfully, the application displays a detailed error message and the location of the error, otherwise it only shows a success message.</p>
+link.associate=Associate
+link.associationMethod=Association method
+link.export=Export
+link.fileExplorer=FileExplorer
+link.firstStep=Creating SIPs: first step
+link.inspectionPanel=Inspection panel
+link.inspectionPanel.associations=Inspection: Associations
+link.inspectionPanel.data=Inspection: Data / Documentation
+link.inspectionPanel.metadata=Inspection: metadata
+link.metadataMethod=Metadata method
+link.schemaPane=Classification scheme
+link.secondStep=Creating SIPs: second step
+link.templatingSystem=Templating system
 metadataMethod=SIPs may contain data and metadata. The metadata is included in each SIP by means of association rules. These association rules define how descriptive metadata selected from the file system is included inside each SIP. There are currently four available metadata association options.
-schemapane=<p>To create a classification plan, the first step is to add description items using the <strong>Add</strong> button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. The levels are created by default with a metadata file obtained using the <em>EAD 2002</em> template.</p>\
+schemaPane=<p>To create a classification plan, the first step is to add description items using the <strong>Add</strong> button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. The levels are created by default with a metadata file obtained using the <em>EAD 2002</em> template.</p>\
 <p>The removal process starts by selecting the items we wish to remove and clicking the <strong>Remove</strong> button, available at the bottom of the panel. Any selected SIPs are removed and its contents return to the normal state, so that they can be added to other SIPs. When a description item is removed, all its descendant SIPs are also removed.</p>\
 <p>By dragging and dropping selected items on top of other items, the classification scheme can be completely <strong>re-organized</strong>. The behaviour of the drag’n’drop system is described as follows:</p>\
 <ul>\
@@ -66,15 +79,15 @@ templatingSystem=<h4>The templating system</h4>\
 <p>The following is an example of how the tags can be used:</p>\
 \
 <p><code>{{title order=1 type="text" label="Template title" mandatory=true auto-generate="title"}}</code></p>
-tooltip.associate=Create SIPs using the selected items
-tooltip.associationMethod=associationMethod
-tooltip.export=export
-tooltip.fileExplorer=fileExplorer
-tooltip.firstStep=firstStep
-tooltip.inspectionpane=inspectionpane
-tooltip.inspectionPanel.associations=inspectionPanel.associations
-tooltip.inspectionPanel.data=inspectionPanel.data
-tooltip.inspectionPanel.metadata=inspectionPanel.metadata
-tooltip.metadataMethod=metadataMethod
-tooltip.schemapane=schemapane
-tooltip.secondStep=secondStep
+tooltip.associate=Create SIPs using the selected items.
+tooltip.associationMethod=The method chosen determines how the files/folders are packaged in SIPs
+tooltip.export=Start the export process of the selected (or all) SIPs.
+tooltip.fileExplorer=The file explorer shows the hierarchy of the added folders. An item can be in one of three states: normal, ignored or mapped.
+tooltip.firstStep=First, select which folders contain the files that will be archived.
+tooltip.inspectionPanel=After creating SIPs, you can opt to manually enrich the SIPs or handle exceptional cases manually.
+tooltip.inspectionPanel.associations=The associations panel displays the rules that have been created with the selected node.
+tooltip.inspectionPanel.data=This panel displays the Data or Documentation of the selected SIP. To toggle between the two modes, use the button to the right.
+tooltip.inspectionPanel.metadata=Create, remove, edit and validate the metadata of a SIP.
+tooltip.metadataMethod=The chosen metadata method determines how the metadata is added to SIPs.
+tooltip.schemaPane=Create or edit a classification scheme.
+tooltip.secondStep=The second step is to import the classification scheme from a file or create it directly in the application.
