--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -236,8 +236,8 @@ Main.help=Help
 Main.checkVersion=Check for updates
 Main.noUpdates.content=You're using the latest version of RODA-in.
 Main.noUpdates.header=RODA-in version %s
-Main.showHelp=Show help
-Main.hideHelp=Hide help
+Main.showHelp=Show help tooltips
+Main.hideHelp=Hide help tooltips
 templatingSystemHelp.header=Templating system help
 metadata.otherlevel=Other level
 validMetadata=Valid metadata!
@@ -246,6 +246,9 @@ CreationModalProcessing.errorMessagesStopped.header=Error messages hidden
 CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent errors will not be displayed.\
 \
 Please check the application's log file to see all the error messages.
+help=Help
+menu=Menu
+Main.helpPage=Help page
 
 
 
