--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -237,8 +237,8 @@ Main.help=Ajuda
 Main.checkVersion=Verificar se há atualizações
 Main.noUpdates.content=Está a usar a versão mais recente do RODA-in.
 Main.noUpdates.header=RODA-in versão %s
-Main.showHelp=Mostrar ajudas
-Main.hideHelp=Esconder ajudas
+Main.showHelp=Mostrar mensagens de ajuda
+Main.hideHelp=Esconder mensagens de ajuda
 templatingSystemHelp.header=Ajuda sobre o sistema de modelos
 validMetadata=Metadados válidos
 invalidMetadata=Metadados inválidos!
@@ -246,6 +246,9 @@ CreationModalProcessing.errorMessagesStopped.header=Mensages de erro escondidas
 CreationModalProcessing.errorMessagesStopped.content=Devido ao elevado número de mensages de erro, não serão mostradas mais erros até ao fim da exportação.\
 \
 Consulte o ficheiro de registo da aplicação para ver todas as mensagens de erro.
+help=Ajuda
+menu=Menu
+Main.helpPage=Página de ajuda
 
 
 
