Fixed the showing/hiding of help tooltips.

--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -26,7 +26,7 @@ link.firstStep=Creating SIPs: first step
 link.inspectionPanel=Inspection panel
 link.inspectionPanel.associations=Inspection: Associations
 link.inspectionPanel.data=Inspection: Data / Documentation
-link.inspectionPanel.metadata=Inspection: metadata
+link.inspectionPanel.metadata=Inspection: Metadata
 link.metadataMethod=Metadata method
 link.schemaPane=Classification scheme
 link.secondStep=Creating SIPs: second step
