Updated IPType translations

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -204,12 +204,16 @@ Footer.memory=Memory usage: %s of %s
 type=Type
 metadata.repository=Repository
 metadata.embargoTime=Embargo Time
+
 IPContentType.ERMS=Electronic Resource Management System
-IPContentType.RDBMS=Relational Database Management System
-IPContentType.SMURF=Semantically Marked Up Record Format
-InspectionPane.IPType=Package type
+IPContentType.RDB=Relational Database Management System
+IPContentType.GEODATA=Geographical Data
+IPContentType.SFSB=SFSB
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
+
+InspectionPane.IPType=Package type
+
 metadata.descDate=Description creation date
 InspectionPane.sipTypeTooltip=IP type
 genericError.title=Oops! An error has occurred.
