--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -185,12 +185,15 @@ Footer.memory=El uso de memoria\:%s de%s
 type=Tipo
 metadata.repository=Repositorio
 metadata.embargoTime=Tiempo de embargo
+
 IPContentType.ERMS=Sistema de Gestión de Recursos Electrónicos
-IPContentType.RDBMS=Sistema de gestión de bases de datos relacionales
-IPContentType.SMURF=Marcado semánticamente hasta formato de grabación
-InspectionPane.IPType=Tipo IP
+IPContentType.RDB=Sistema de gestión de bases de datos relacionales
+IPContentType.GEODATA=Dato geográficos
+IPContentType.SFSB=SFSB
 IPContentType.MIXED=Mezclado
 IPContentType.OTHER=Otro
+
+InspectionPane.IPType=Tipo IP
 metadata.descDate=Descripción fecha de creación
 InspectionPane.sipTypeTooltip=Tipo IP
 genericError.title=Oops\! Ha ocurrido un error...
