--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -204,12 +204,15 @@ Footer.memory=Memória utilizada: %s de %s
 type=Tipo
 metadata.repository=Repositório
 metadata.embargoTime=Tempo de embargo
+
 IPContentType.ERMS=Sistema de Gestão de Recursos Eletrónicos
-IPContentType.RDBMS=Sistema de gestão de bases de dados relacionais
-IPContentType.SMURF=Formato de registo semanticamente anotado
-InspectionPane.IPType=Tipo de pacote
+IPContentType.RDB=Sistema de gestão de bases de dados relacionais
+IPContentType.GEODATA=Dados geográficos
+IPContentType.SFSB=SFSB
 IPContentType.MIXED=Misto
 IPContentType.OTHER=Outro
+
+InspectionPane.IPType=Tipo de pacote
 metadata.descDate=Data da descrição
 InspectionPane.sipTypeTooltip=Tipo do pacote
 genericError.title=Oops! Ocorreu um erro.
