Fixed bug related to removing all collapsed levels

--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -183,6 +183,7 @@ items=Items
 folders=Carpeta(s)
 Footer.memory=El uso de memoria\:%s de%s
 type=Tipo
+version=Versión
 metadata.repository=Repositorio
 metadata.embargoTime=Tiempo de embargo
 
