--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -183,6 +183,7 @@ items=darab
 folders=mappák
 Footer.memory=Felhasznált memória % a %s-ból
 type=Típus
+version=Version
 metadata.repository=Levéltár
 metadata.embargoTime=Zárolási idő
 IPContentType.ERMS=Elektronikus Iratkezelő Rendszer
