--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -202,6 +202,7 @@ items=items
 folders=folder(s)
 Footer.memory=Memory usage: %s of %s
 type=Type
+version=Version
 metadata.repository=Repository
 metadata.embargoTime=Embargo Time
 
