--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -211,4 +211,5 @@ Main.openConfigurationFolder=Abrir carpeta de configuración
 restart=Restaurar
 
 
+errorValidatingMetadata = El archivo no es válido según el esquema.
 
