--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -207,5 +207,6 @@ InspectionPane.multipleSelected.appliedMessage=Változtatások végrehajtva\!
 Main.openConfigurationFolder=Konfiguráció mappa megnyitása
 restart=Újraindítás
 
+errorValidatingMetadata = The file is not valid according to the schema.
 
 
